Fix team name overflow in team info page. Fixes #73

--- a/frontend/css/livesite.css
+++ b/frontend/css/livesite.css
@@ -397,6 +397,10 @@ a.no-decoration {
  *
  */
 
+.teaminfo h1.my-3 {
+  overflow-wrap: anywhere;
+}
+
 .teaminfo .team-photo {
   width: 100%;
   height: auto;
